--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -71,6 +71,11 @@ parameters:
 			path: src/Models/Conversation.php
 
 		-
+			message: "#^Parameter \\#1 \\$related of method Illuminate\\\\Database\\\\Eloquent\\\\Model\\:\\:hasMany\\(\\) expects string, mixed given\\.$#"
+			count: 2
+			path: src/Models/Conversation.php
+
+		-
 			message: "#^Parameter \\#1 \\$value of static method BombenProdukt\\\\Conversations\\\\Enum\\\\ConversationPriority\\:\\:fromString\\(\\) expects string, mixed given\\.$#"
 			count: 1
 			path: src/Models/Conversation.php
@@ -141,6 +146,11 @@ parameters:
 			path: src/Models/Message.php
 
 		-
+			message: "#^Parameter \\#1 \\$related of method Illuminate\\\\Database\\\\Eloquent\\\\Model\\:\\:belongsTo\\(\\) expects string, mixed given\\.$#"
+			count: 1
+			path: src/Models/Message.php
+
+		-
 			message: "#^Property 'model_id' does not exist in BombenProdukt\\\\Conversations\\\\Models\\\\Participant model\\.$#"
 			count: 1
 			path: src/Models/Message.php
@@ -152,5 +162,10 @@ parameters:
 
 		-
 			message: "#^Method BombenProdukt\\\\Conversations\\\\Models\\\\Participant\\:\\:getTable\\(\\) should return string but returns mixed\\.$#"
+			count: 1
+			path: src/Models/Participant.php
+
+		-
+			message: "#^Parameter \\#1 \\$related of method Illuminate\\\\Database\\\\Eloquent\\\\Model\\:\\:belongsTo\\(\\) expects string, mixed given\\.$#"
 			count: 1
 			path: src/Models/Participant.php
